<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">货车快跑</string>

    <string name="home">首页</string>
    <string name="list">货源</string>
    <string name="team">货源</string>
    <string name="order">订单</string>
    <string name="setting">个人设置</string>

    <string name="order_detail">报价单详情</string>
    <string name="home_detail">调度单详情</string>
    <string name="car_detail">车队详情</string>
    <string name="home_dispath_detail">运输单详情</string>
    <string name="order_filter">寻找货源</string>
    <string name="login_page">用户登录</string>
    <string name="register_page">用户注册</string>
    <string name="search_team">搜索车队</string>
    <string name="personal_info">个人信息</string>
    <string name="personal_edit">信息更新</string>
    <string name="logont_success">注销登录成功！</string>
    <string name="my_cars">我的车辆</string>
    <string name="my_cars_detail">车辆详情</string>
    <string name="my_cars_edit">车辆编辑</string>
    <string name="my_cars_add">车辆添加</string>

    <!--订单详情-->
    <string name="order_detail_tag1">订单状态：</string>
    <string name="order_detail_tag2">商品总价：</string>
    <string name="order_detail_tag3">应付总额：</string>
    <string name="order_detail_tag4">物流信息：</string>
    <string name="order_detail_tag5">车队：</string>
    <string name="order_detail_tag6">发货时间：</string>
    <string name="order_detail_tag7">收货时间：</string>
    <string name="order_detail_tag8">备注：</string>
    <string name="order_detail_tag9">收货时间：</string>
    <string name="order_detail_tag10">发票类型：</string>
    <string name="order_detail_tag11">发票抬头：</string>
    <string name="order_detail_tag12">截止日期：</string>

    <!--调度单详情-->
    <string name="dispath_detail_title1">调度单</string>
    <string name="dispath_detail_title2">订单包含的运输单</string>
    <string name="dispath_detail_title3">订单状态</string>
    <string name="dispath_detail_tag1">调度单号：</string>
    <string name="dispath_detail_tag2">状态：</string>
    <string name="dispath_detail_tag3">发货时间：</string>
    <string name="dispath_detail_tag4">送达时间：</string>
    <string name="dispath_detail_tag5">订单备注：</string>

    <!--车队详情-->
    <string name="team_detail_tag1">车队名称：</string>
    <string name="team_detail_tag2">联系人：</string>
    <string name="team_detail_tag3">联系人电话：</string>
    <string name="team_detail_tag4">联系人传真：</string>
    <string name="team_detail_tag5">状态：</string>

    <!--车辆详情-->
    <string name="my_car_detail_tag7">车名：</string>
    <string name="my_car_detail_tag1">车牌：沪A100011</string>
    <string name="my_car_detail_tag2">车载重：吨</string>
    <string name="my_car_detail_tag3">车高：米</string>
    <string name="my_car_detail_tag4">车长：米</string>
    <string name="my_car_detail_tag5">车宽：米</string>
    <string name="my_car_detail_tag6">出厂日期：</string>

    <!--运输单详情-->
    <string name="home_dispath_title1">委托单号：</string>
    <string name="home_dispath_title2">货主：</string>
    <string name="home_dispath_title3">装货时间：</string>
    <string name="home_dispath_title4">送达时间：</string>
    <string name="home_dispath_title5">货物名称：</string>
    <string name="home_dispath_title6">当前重量：</string>
    <string name="home_dispath_title7">当前件数：</string>
    <string name="home_dispath_title8">状态：</string>
    <string name="home_dispath_title9">类型：</string>

    <!--订单筛选-->
    <string name="order_filter_tag1">货物属性</string>
    <string name="order_filter_tag2">起始地</string>
    <string name="order_filter_tag3">目的地</string>
    <string name="order_filter_tag4">货物重量</string>
    <string name="order_filter_tag5">货物面积</string>
    <string name="order_filter_tag6">货物金额</string>
    <string name="goods_attr1">易碎品</string>
    <string name="goods_attr2">其他</string>
    <string name="btn_filter">检索</string>

    <string name="title_alert">提示</string>
    <string name="alert_ok">确定</string>
    <string name="alert_cancel">取消</string>

    <!-- 设置 -->
    <string name="carteam">我的车队</string>
    <string name="cars">我的车辆</string>
    <string name="personal">个人信息</string>
    <string name="other">发现</string>
    <string name="report_price">我要报价</string>
    <string name="del_team">解挂此车队</string>

    <string name="login_phone">手机号</string>
    <string name="login_email">账号/手机/电子邮箱</string>
    <string name="login_username">用户名</string>
    <string name="login_realname">真实姓名</string>
    <string name="old_password">旧密码</string>
    <string name="login_password">密码</string>
    <string name="login_password2">确认密码</string>
    <string name="register_btn_yan">验证码</string>
    <string name="register">注册</string>
    <string name="add">添加</string>
    <string name="update">更新</string>
    <string name="click_to_login">点击登录</string>
    <string name="chose_date">日期</string>

    <string name="login_param_is_null">用户名或者密码为空</string>
    <string name="team_is_null">车队名称不能为空</string>
    <string name="register_param1_is_null">手机号不能为空</string>
    <string name="register_param2_is_null">密码不能为空</string>
    <string name="register_param3_is_null">确认密码不能为空</string>
    <string name="register_param4_is_null">用户名不能为空</string>
    <string name="register_param7_is_null">真实姓名不能为空</string>
    <string name="register_param5_is_null">两次密码不同，请确认</string>
    <string name="register_param6_is_null">旧密码不正确，请确认</string>

    <string name="register_edit_yan">验证码</string>
    <string name="login_btn">登录</string>
    <string name="logout_btn">注销登录</string>
    <string name="login_register">免费注册</string>
    <string name="login_forget">忘记密码</string>

    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">下拉可以刷新</string>
    <string name="pull_to_refresh_update">最近更新：</string>


    <string name="setting_head_title">系统设置</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="title_activity_login">loginActivity</string>

    <string name="startlocation">开启定位</string>
    <string name="stoplocation">停止定位</string>
    <string name="error_code_desc">错误码说明</string>
    <string name="qa_title">常见问题</string>
    <string name="hight_accuracy_desc">高精度定位模式下，会同时使用GPS、Wifi和基站定位，返回的是当前条件下精度最好的定位结果</string>
    <string name="saving_battery_desc">低功耗定位模式下，仅使用网络定位即Wifi和基站定位，返回的是当前条件下精度最好的网络定位结果</string>
    <string name="device_sensor_desc">仅用设备定位模式下，只使用用户的GPS进行定位。这个模式下，由于GPS芯片锁定需要时间，首次定位速度会需要一定的时间</string>
    <string name="error_code_detail"> 61 ： GPS定位结果\n
		62 ： 扫描整合定位依据失败。此时定位结果无效。\n
		63 ： 网络异常，没有成功向服务器发起请求。此时定位结果无效。\n
		65 ： 定位缓存的结果。\n
		66 ： 离线定位结果。通过requestOfflineLocaiton调用时对应的返回结果\n
		67 ： 离线定位失败。通过requestOfflineLocaiton调用时对应的返回结果\n
		68 ： 网络连接失败时，查找本地离线定位时对应的返回结果\n
		161： 表示网络定位结果\n
		162~167： 服务端定位失败\n
		502：key参数错误\n
		505：key不存在或者非法\n
		601：key服务被开发者自己禁用\n
		602：key mcode不匹配\n
		501～700：key验证失败\n</string>
    <string name="qa_callback">问题反馈方法</string>
    <string name="qa_callback_mail">mapapi@baidu.com</string>
    <string name="title_activity_select_pictuer">SelectPictuerActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_log">LogActivity</string>
</resources>
