<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/login_bg2"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <!--<ImageView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginBottom="20dip"-->
    <!--android:layout_marginTop="20dip"-->
    <!--android:src="@drawable/login_logo" />-->
    <View
        android:layout_width="fill_parent"
        android:layout_height="300dip"></View>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:background="@drawable/general_img_inputbox"
        android:gravity="center"
        android:padding="5.0dip">

        <EditText
            android:id="@+id/btn_email"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@null"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@color/gray"
            android:textColorHint="@color/grayslate"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_marginBottom="10.0dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="5.0dip"
        android:background="@drawable/general_img_inputbox"
        android:gravity="center"
        android:padding="5.0dip">

        <EditText
            android:id="@+id/btn_pwd"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@null"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/gray"
            android:textColorHint="@color/grayslate" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5.0dip">

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="30dip"
            android:layout_marginLeft="30dip"
            android:background="@null"
            android:text="@string/login_register"
            android:textColor="@color/white"
            android:textSize="12.0dip" />
    </RelativeLayout>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/btn_login"
        android:layout_width="fill_parent"
        android:layout_height="45.0dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_marginTop="10.0dip"
        android:text="@string/login_btn"
        bootstrap:bb_roundedCorners="true"
        bootstrap:bb_size="small"
        bootstrap:bb_type="success" />


</LinearLayout>