<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/graywhite"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_marginTop="@dimen/padding_10px"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:gravity="center"
            android:background="@drawable/general_img_inputbox"
            android:padding="5.0dip"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginBottom="5.0dip">

            <EditText
                android:id="@+id/car_name"
                android:textColorHint="@color/grayslate"
                android:background="@null"
                android:textColor="@color/black"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:singleLine="true"
                android:hint="@string/my_car_detail_tag7"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:background="@drawable/general_img_inputbox"
            android:padding="5.0dip"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginBottom="5.0dip">

            <!--<TextView-->
            <!--android:gravity="center"-->
            <!--android:background="@drawable/username_icon"-->
            <!--android:layout_width="20.0dip"-->
            <!--android:layout_height="20.0dip"-->
            <!--android:layout_marginRight="5.0dip" />-->

            <EditText
                android:id="@+id/car_no"
                android:background="@null"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/my_car_detail_tag1"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/grayslate">

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:background="@drawable/general_img_inputbox"
            android:padding="5.0dip"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginBottom="5.0dip">

            <EditText
                android:id="@+id/car_weight"
                android:textColorHint="@color/grayslate"
                android:background="@null"
                android:singleLine="true"
                android:textColor="@color/black"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/my_car_detail_tag2"
                android:maxLines="1" />
        </LinearLayout>


        <LinearLayout
            android:gravity="center"
            android:background="@drawable/general_img_inputbox"
            android:padding="5.0dip"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginBottom="5.0dip">

            <EditText
                android:id="@+id/car_height"
                android:textColorHint="@color/grayslate"
                android:background="@null"
                android:singleLine="true"
                android:textColor="@color/black"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/my_car_detail_tag3"
                android:maxLines="1" />
        </LinearLayout>


        <LinearLayout
            android:gravity="center"
            android:background="@drawable/general_img_inputbox"
            android:padding="5.0dip"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginBottom="5.0dip">

            <EditText
                android:id="@+id/car_length"
                android:textColorHint="@color/grayslate"
                android:background="@null"
                android:textColor="@color/black"
                android:singleLine="true"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:hint="@string/my_car_detail_tag4"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:background="@drawable/general_img_inputbox"
            android:padding="5.0dip"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginBottom="5.0dip">

            <EditText
                android:id="@+id/car_width"
                android:textColorHint="@color/grayslate"
                android:background="@null"
                android:textColor="@color/black"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:singleLine="true"
                android:hint="@string/my_car_detail_tag5"
                android:maxLines="1" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:background="@drawable/general_img_inputbox"
            android:padding="5.0dip"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginLeft="10.0dip"
            android:layout_marginTop="5.0dip"
            android:layout_marginRight="10.0dip"
            android:layout_marginBottom="5.0dip">

            <EditText
                android:id="@+id/car_outdate"
                android:textColorHint="@color/grayslate"
                android:background="@null"
                android:textColor="@color/black"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:singleLine="true"
                android:layout_weight="1"
                android:enabled="false"
                android:hint="@string/my_car_detail_tag6"
                android:maxLines="1" />


            <Button
                android:layout_width="60dip"
                android:layout_height="35dip"
                android:layout_marginTop="5dip"
                android:layout_marginRight="10dip"
                android:layout_margin="0dip"
                android:text="@string/chose_date"
                android:id="@+id/show_date" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:textSize="18.0dip"
            android:textColor="@color/white"
            android:background="@drawable/btn_ok_selector"
            android:layout_width="fill_parent"
            android:layout_height="45.0dip"
            android:layout_margin="5.0dip"
            android:layout_marginTop="10.0dip"
            android:text="添加车辆"
            android:onClick="viewClick" />
    </LinearLayout>

    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center"
            android:background="@drawable/general_img_inputbox"
            android:padding="5.0dip"
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_margin="10.0dip">

            <TextView
                android:gravity="center"
                android:background="@drawable/login_icon_user"
                android:layout_width="20.0dip"
                android:layout_height="20.0dip"
                android:layout_marginRight="5.0dip" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>